--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "colors": "^1.4.0",
+    "connect-mongodb-session": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-graphql": "^0.12.0",
+    "express-session": "^1.18.1",
     "graphql": "^15.10.1",
     "mongoose": "^8.9.5"
   }
