--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-graphql": "^0.12.0",
     "express-session": "^1.18.1",
     "graphql": "^15.10.1",
+    "moment": "^2.30.1",
     "mongoose": "^8.9.5"
   }
 }
